--- a/data_extraction_and_visualization.ipynb
+++ b/data_extraction_and_visualization.ipynb
@@ -1243,7 +1243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Swarm plot za 'ASSIST %' prema 'SEED' prikazuje raspored udjela asistencija za svako sjeme. Može pomoći u identifikaciji uzoraka distribucije udjela asistencija."
+    "Swarm plot za 'ASSIST %' prema 'SEED' prikazuje raspored udjela asistencija za svaki seed. Može pomoći u identifikaciji uzoraka distribucije udjela asistencija."
    ]
   }
  ],
