--- a/reporoduction_of_experiments.ipynb
+++ b/reporoduction_of_experiments.ipynb
@@ -1363,6 +1363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***U ovom slučaju se može koristiti i gubitak \"binary cross entropy\".***\n",
     "Log-loss funkcija je funkcija koja se koristi za evaluaciju modela logističke regresije. Ona je definirana kao:\n",
     "$$\n",
     "L = -\\frac{1}{N}\\sum_{i=1}^{N}y_i\\log(p_i) + (1-y_i)\\log(1-p_i)\n",
@@ -1846,7 +1847,7 @@
    "source": [
     "### Korištenje Boosting modela\n",
     "\n",
-    "Kao predzadnji pristup, isprobati ćemo korištenje Boosting modela. Boosting modeli su modeli koji se sastoje od više slabih modela koji se treniraju na podskupovima podataka, a zatim se njihovi izlazi kombiniraju kako bi se dobio izlaz konačnog modela, na samome kraju slijedno učimo algoritam na pogreškama prethodnih algoritama. Ova metoda je slična onoj obrađenoj u radu, no umjesto da koristimo modele linearne regresije, u Boostingu se koriste modeli bazirani na stablima odlučivanja (decision stumps), čime je također sličan i prošlom pristupu."
+    "Kao predzadnji pristup, isprobati ćemo korištenje Boosting modela. Boosting modeli su modeli koji se sastoje od više slabih modela koji se treniraju na podskupovima podataka, a zatim se njihovi izlazi kombiniraju kako bi se dobio izlaz konačnog modela, na samome kraju slijedno učimo algoritam na pogreškama prethodnih algoritama. Ova metoda je slična onoj obrađenoj u radu, no umjesto da koristimo modele linearne regresije, u Boostingu se koriste modeli bazirani na stablima odlučivanja (decision stumps), a sama distribucija korištenih podataka s kojima se uči model se mijenja s obzirom na to koliko model pogriješi na kojem podatku, time model uči na \"problematičnim\" podacima."
    ]
   },
   {
